--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ a:hover, a:active {
 <body>
 
 
-<a href="https://stellarthoughts.tk/shop" target="_blank">
+<a href="https://stellarthoughts.tk/reviews" target="_blank">
 ✨ more reviews </a>
 
 </body>
